@@ -31,6 +31,7 @@
 * Cybersource and Cybersource Rest: Update card type code for Carnet cards [rachelkirk] #5235
 * Stripe PI: Add challenge as valid value for request_three_d_secure [jcreiff] #5238
 * StripePI: Add metadata for GooglePay FPAN [almalee24] #5242
+* Paypal: Add inquire method [almalee24] #5231
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
